Eighty percent done!

--- a/index.html
+++ b/index.html
@@ -5,88 +5,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Website Favicon Icon -->
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
     <!-- Customized CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Hot Gadget e-Commerce | Unit9 </title>
+    <title>eSchool assignment | Unit10 </title>
 </head>
 <body>
-    <!-- Navigation Bar -->
+  <!-- Section manu and carousel-->
+  <section id="carousel-section">
+      <!-- Top Menu -->
     <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">
-          <img src="images/hot-gadgets/logo.png" alt="">
+          <img class="logo-img" src="images/ICON/Logo.png" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+            <li class="nav-item menu">
+                <a class="nav-link" href="#">Book</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Product</a>
+            <li class="nav-item menu">
+                <a class="nav-link" href="#">Courses</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">About us</a>
+            <li class="nav-item menu">
+                <a class="nav-link" href="#">Others</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contact us</a>
+            <li class="nav-item menu">
+                <a class="nav-link" href="#">Blog</a>
+            </li>
+            <li class="nav-item menu">
+                <a class="nav-link" href="#">Sign in</a>
             </li>
           </ul>
         </div>
       </nav>
-    </div>
-    <!--Ends Navigation-->
+      <!-- end of top menu -->
 
-    <!-- Main Carousel  -->
-    <div class="container">
-      <div id="carouselExampleControls" class="carousel slide bg-image" data-ride="carousel">
+      <!-- Main Carousel  -->
+      <div id="carouselExampleControls" class="carousel slide d-flex justify-content-around" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <div class="row align-items-center">
-              <div class="col-md-7">
-                <h1>Big size mega TV</h1>
-                <p>This is the best TV in the world to waste time in front of TV</p>
-                <h1 class="price">$1200</h1>
-                <button class="buy-now-button">Buy Now >></button>
+            <div class="row">
+              <div class="col-md-7 carousel-txt">
+                <p>Are you ready to learn?</p>
+                <h1>Learn With fun </h1>
+                <h1>on <span style="color:#21B573;">any schedule</span></h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi hic nostrum reiciendis aliquam.</p>
+                <button class="carousel-btn">Get Started</button>
               </div>
               <div class="col-md-5">
-                <img src="images/hot-gadgets/banner-products/product-1.png" class="d-block w-100" alt="...">
+                <img src="images/Photos/Illustration.png" class="d-block w-100" alt="...">
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="row align-items-center">
-              <div class="col-md-7">
-                <h1>Big size mega TV</h1>
-                <p>This is the best TV in the world to waste time in front of TV</p>
-                <h1 class="price">$1200</h1>
-                <button class="buy-now-button">Buy Now >></button>
+              <div class="col-md-7 carousel-txt">
+                <p>Are you ready to learn?</p>
+                <h1>Learn With fun </h1>
+                <h1>on <span style="color:#21B573;">any schedule</span></h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi hic nostrum reiciendis aliquam.</p>
+                <button class="carousel-btn">Get Started</button>
               </div>
               <div class="col-md-5">
-                <img src="images/hot-gadgets/banner-products/slider-1.png" alt="" class="d-block w-100">
+                <img src="images/Photos/Illustration.png" class="d-block w-100" alt="...">
               </div>
             </div>
           </div>
           <div class="carousel-item">
             <div class="row align-items-center">
-              <div class="col-md-7">
-                <h1>Big size mega TV</h1>
-                <p>This is the best TV in the world to waste time in front of TV</p>
-                <h1 class="price">$1200</h1>
-                <button class="buy-now-button">Buy Now >></button>
+              <div class="col-md-7 carousel-txt">
+                <p>Are you ready to learn?</p>
+                <h1>Learn With fun </h1>
+                <h1>on <span style="color:#21B573;">any schedule</span></h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi hic nostrum reiciendis aliquam.</p>
+                <button class="carousel-btn">Get Started</button>
               </div>
               <div class="col-md-5">
-                <img src="images/hot-gadgets/banner-products/slider-3.png" alt="" class="d-block w-100">
+                <img src="images/Photos/Illustration.png" class="d-block w-100" alt="...">
               </div>
             </div>
           </div>
-        </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
@@ -96,118 +101,150 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
+      <!-- End of Main Carousel -->
     </div>
-    <!-- End of Main Carousel -->
+  </section>
+  <!-- end of section menu and carousel-->
 
-    <!--  Smartphone Categories -->
+  <!-- ICON section | Second section -->
+  <section id="icon-section">
     <div class="container">
-      <div class="d-flex flex-row bd-highlight">
-        <h1>Smartphone</h1>
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-2 text-center icon-image">
+          <img src="images/ICON/book.png" alt="">
+          <h1>1500+ Topic</h1>
+          <p>Learn anything</p>
+        </div>
+        <div class="col-md-2 text-center icon-row icon-image">
+          <img src="images/ICON/Student.png" alt="">
+          <h1>1800+ Students</h1>
+          <p>Learn anything</p>
+        </div>
+        <div class="col-md-2 text-center icon-image">
+          <img src="images/ICON/Test.png" alt="">
+          <h1>9K+ Test Taken</h1>
+          <p>Learn anything</p>
+        </div>
+        <div class="col-md-2 text-center icon-image">
+          <img src="images/ICON/Students.png" alt="">
+          <h1>2000+ Student</h1>
+          <p>Learn anything</p>
+        </div>
       </div>
-      <div class="d-flex flex-row-reverse bd-highlight">
-        <a href="#">See All</a>
-      </div>
+    </div>
+  </section>
+  <!-- End of ICON section -->
+
+  <!-- Third Section | Online Resources -->
+  <section id="third-section">
+    <div class="container">
       <div class="card-deck">
-        <div class="card text-center">
-          <img src="images/hot-gadgets/phone/phone-3.png" class="card-img-top" alt="...">
+        <div class="card">
+          <img src="images/Photos/Morder pyschology.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <h4>$999</h4>
+            <h5 class="card-title">Modern pyschology</h5>
+            <p>Designation</p>
+            <button class="carousel-btn">Buy Courses</button>
           </div>
           <div class="card-footer">
-            <button class="buy-now-button">Buy Now >></button>
+            <small class="text-muted float-left">Starts 20 April, 2021</small>
+            <small class="text-muted float-right">60 Seats</small>
           </div>
         </div>
-        <div class="card text-center">
-          <img src="images/hot-gadgets/phone/phone-1.png" class="card-img-top" alt="...">
+        <div class="card">
+          <img src="images/Photos/Morder pychons.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <h4>$999</h4>
+            <h5 class="card-title">Modern pyschology</h5>
+            <p>Designation</p>
+            <button class="carousel-btn">Buy Courses</button>
           </div>
           <div class="card-footer">
-            <button class="buy-now-button">Buy Now >></button>
+            <small class="text-muted float-left">Starts 20 April, 2021</small>
+            <small class="text-muted float-right">60 Seats</small>
           </div>
         </div>
-        <div class="card text-center">
-          <img src="images/hot-gadgets/phone/phone-2.png" class="card-img-top" alt="...">
+        <div class="card">
+          <img src="images/Photos/Morder psyc.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. </p>
-            <h4>$999</h4>
+            <h5 class="card-title">Modern pyschology</h5>
+            <p>Designation</p>
+            <button class="carousel-btn">Buy Courses</button>
           </div>
           <div class="card-footer">
-            <button class="buy-now-button">Buy Now >></button>
+            <small class="text-muted float-left">Starts 20 April, 2021</small>
+            <small class="text-muted float-right">60 Seats</small>
           </div>
         </div>
       </div>
     </div>
-    <!-- End of Smartphone -->
+  </section>
+  <!-- End of Section Three | Online Resources -->
 
-    <!-- Laptop Categories -->
-    <div class="container mb-50">
-      <div class="d-flex flex-row bd-highlight">
-        <h1>Laptop</h1>
-      </div>
-      <div class="d-flex flex-row-reverse">
-        <a href="#">See All</a>
-      <div class="row row-cols-1 row-cols-md-3 text-center">
-        <div class="col mb-4">
-          <div class="card h-100">
-            <img src="images/hot-gadgets/laptop/product-1.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <h4>$460</h4>
-              <button class="buy-now-button">Buy Now >></button>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-4">
-          <div class="card h-100">
-            <img src="images/hot-gadgets/laptop/product-2.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a short card.</p>
-              <h4>$460</h4>
-              <button class="buy-now-button">Buy Now >></button>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-4">
-          <div class="card h-100">
-            <img src="images/hot-gadgets/laptop/product-3.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-              <h4>$460</h4>
-              <button class="buy-now-button">Buy Now >></button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- End of Laptop categories -->
+  <!-- TESTIMONIALS section | Fourth section -->
+  <section id="testimonials">
     <div class="container">
-      <h1 class="text-center h1-margin">Categories</h1>
-      <div class="row d-flex align-items-center">
-        <div class="col-md-3 text-center">
-          <img src="images/hot-gadgets/Categories/bag.png" class="bx-shadow" alt="">
-        </div>
-        <div class="col-md-3">
-          <div class="row">
-            <img src="images/hot-gadgets/Categories/perfume.png" class="bx-shadow" alt="">
+      <h1 class="text-center">Testmonial</h1>
+      <div class="row">
+        <div class="row testimonial d-flex justify-content-center">
+          <div class="col-md-3">
+            <img src="images/Photos/Man.png" alt="">
           </div>
-          <div class="row">
-            <img src="images/hot-gadgets/Categories/shoe.png" class="bx-shadow" alt="">
+          <div class="col-md-6 text-center">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit pariatur amet impedit cum harum cumque ipsam expedita distinctio tenetur delectus possimus quia non necessitatibus, ipsa recusandae aliquam debitis quod eligendi? Earum.</p>
           </div>
-        </div>
-        <div class="col-md-6 align-items-center ">
-          <img src="images/hot-gadgets/Categories/pale-order.png" alt="">
         </div>
       </div>
     </div>
+  </section>
+  <!-- End of TESTIMONIALS section -->
+
+  <!-- Contact us Section | Fifth Section -->
+  <section id="contact-us">
+    <div class="container">
+      <h1 class="text-center">Contact us</h1>
+      <form action="">
+
+      </form>
+    </div>
+  </section>
+  <!-- End of Section five -->
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti, iure!</p>
+        </div>
+        <div class="col-md-2">
+          <h5>Course</h5>
+          <ul>
+            <li><a href="#">Graphic Design</a></li>
+            <li><a href="#">Web Design</a></li>
+            <li><a href="#">Business</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2">
+          <h5>Terms</h5>
+          <ul>
+            <li><a href="#">Graphic Design</a></li>
+            <li><a href="#">Web Design</a></li>
+            <li><a href="#">Business</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2">
+          <h5>Useful Links</h5>
+          <ul>
+            <li><a href="#">Graphic Design</a></li>
+            <li><a href="#">Web Design</a></li>
+            <li><a href="#">Business</a></li>
+          </ul>
+        </div> 
+      </div>
+      <div class="copyright text-center">
+        <p>Copyright <span>&#9400;</span><a target="_blank" href="https://github.com/spaceled?tab=projects">2020. Rezaul</a></p>
+      </div>  
+    </div>
+  </footer>
+    
 
 
     <!-- Bootstrap Min JavaScript -->
