--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
+    <!-- Font Awesome Icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- Customized CSS -->
     <link rel="stylesheet" href="css/style.css">
     <title>eSchool assignment | Unit10 </title>
@@ -27,20 +30,20 @@
         </button>
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item menu">
+            <li class="nav-item mr-15">
                 <a class="nav-link" href="#">Book</a>
             </li>
-            <li class="nav-item menu">
+            <li class="nav-item mr-15">
                 <a class="nav-link" href="#">Courses</a>
             </li>
-            <li class="nav-item menu">
+            <li class="nav-item mr-10">
                 <a class="nav-link" href="#">Others</a>
             </li>
-            <li class="nav-item menu">
+            <li class="nav-item mr-15">
                 <a class="nav-link" href="#">Blog</a>
             </li>
-            <li class="nav-item menu">
-                <a class="nav-link" href="#">Sign in</a>
+            <li class="nav-item">
+                <a style="color:white!important;" class="nav-link" href="#">Sign in</a>
             </li>
           </ul>
         </div>
@@ -48,46 +51,46 @@
       <!-- end of top menu -->
 
       <!-- Main Carousel  -->
-      <div id="carouselExampleControls" class="carousel slide d-flex justify-content-around" data-ride="carousel">
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <div class="row">
-              <div class="col-md-7 carousel-txt">
+            <div class="row d-flex justify-content-between">
+              <div class="col-md-4 carousel-txt">
                 <p>Are you ready to learn?</p>
                 <h1>Learn With fun </h1>
                 <h1>on <span style="color:#21B573;">any schedule</span></h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi hic nostrum reiciendis aliquam.</p>
                 <button class="carousel-btn">Get Started</button>
               </div>
-              <div class="col-md-5">
+              <div class="col-md-6">
                 <img src="images/Photos/Illustration.png" class="d-block w-100" alt="...">
               </div>
             </div>
           </div>
           <div class="carousel-item">
-            <div class="row align-items-center">
-              <div class="col-md-7 carousel-txt">
+            <div class="row d-flex justify-content-between">
+              <div class="col-md-4 carousel-txt">
                 <p>Are you ready to learn?</p>
                 <h1>Learn With fun </h1>
                 <h1>on <span style="color:#21B573;">any schedule</span></h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi hic nostrum reiciendis aliquam.</p>
                 <button class="carousel-btn">Get Started</button>
               </div>
-              <div class="col-md-5">
+              <div class="col-md-6">
                 <img src="images/Photos/Illustration.png" class="d-block w-100" alt="...">
               </div>
             </div>
           </div>
           <div class="carousel-item">
-            <div class="row align-items-center">
-              <div class="col-md-7 carousel-txt">
+            <div class="row d-flex justify-content-between">
+              <div class="col-md-4 carousel-txt">
                 <p>Are you ready to learn?</p>
                 <h1>Learn With fun </h1>
                 <h1>on <span style="color:#21B573;">any schedule</span></h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi hic nostrum reiciendis aliquam.</p>
                 <button class="carousel-btn">Get Started</button>
               </div>
-              <div class="col-md-5">
+              <div class="col-md-6">
                 <img src="images/Photos/Illustration.png" class="d-block w-100" alt="...">
               </div>
             </div>
@@ -138,6 +141,7 @@
   <!-- Third Section | Online Resources -->
   <section id="third-section">
     <div class="container">
+      <h1 class="text-center mb-5">Online Courses</h1>
       <div class="card-deck">
         <div class="card">
           <img src="images/Photos/Morder pyschology.png" class="card-img-top" alt="...">
@@ -146,9 +150,9 @@
             <p>Designation</p>
             <button class="carousel-btn">Buy Courses</button>
           </div>
-          <div class="card-footer">
-            <small class="text-muted float-left">Starts 20 April, 2021</small>
-            <small class="text-muted float-right">60 Seats</small>
+          <div class="card-footer">            
+            <small class="text-muted float-left mr-5"><i class="fa fa-calendar-minus-o mr-1"></i>Starts 20 April, 2021</small>
+            <small class="text-muted float-right mr-5"><i class="fa fa-users mr-1" aria-hidden="true"></i>60 Seats</small>
           </div>
         </div>
         <div class="card">
@@ -158,9 +162,9 @@
             <p>Designation</p>
             <button class="carousel-btn">Buy Courses</button>
           </div>
-          <div class="card-footer">
-            <small class="text-muted float-left">Starts 20 April, 2021</small>
-            <small class="text-muted float-right">60 Seats</small>
+          <div class="card-footer">           
+            <small class="text-muted float-left mr-5"><i class="fa fa-calendar-minus-o mr-1"></i>Starts 20 April, 2021</small>
+            <small class="text-muted float-right mr-5"><i class="fa fa-users mr-1" aria-hidden="true"></i>60 Seats</small>
           </div>
         </div>
         <div class="card">
@@ -170,9 +174,9 @@
             <p>Designation</p>
             <button class="carousel-btn">Buy Courses</button>
           </div>
-          <div class="card-footer">
-            <small class="text-muted float-left">Starts 20 April, 2021</small>
-            <small class="text-muted float-right">60 Seats</small>
+          <div class="card-footer">           
+            <small class="text-muted float-left mr-5"><i class="fa fa-calendar-minus-o mr-1"></i>Starts 20 April, 2021</small>
+            <small class="text-muted float-right mr-5"><i class="fa fa-users mr-1" aria-hidden="true"></i>60 Seats</small>
           </div>
         </div>
       </div>
@@ -185,8 +189,8 @@
     <div class="container">
       <h1 class="text-center">Testmonial</h1>
       <div class="row">
-        <div class="row testimonial d-flex justify-content-center">
-          <div class="col-md-3">
+        <div class="row testimonial">
+          <div class="col-md-4 d-flex justify-content-end">
             <img src="images/Photos/Man.png" alt="">
           </div>
           <div class="col-md-6 text-center">
@@ -198,16 +202,49 @@
   </section>
   <!-- End of TESTIMONIALS section -->
 
+  <!-- Subscribe Section | Section Five-->
+  <section id="subscibe">
+    <div class="container">
+      <h1 class="text-center">SUBSCRIBE US</h1>
+      <div class="container d-flex align-items-center justify-content-center">
+        <div>
+          <input placeholder="Please, enter your email." class="form-control mb-3" type="text">
+          <button class="subs-button">SUBSCRIBE  </button>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End of Subscrive | Section Five -->
+
   <!-- Contact us Section | Fifth Section -->
   <section id="contact-us">
     <div class="container">
-      <h1 class="text-center">Contact us</h1>
-      <form action="">
-
-      </form>
+      <h1 class="text-center mb-5">KEEP IN TOUCH</h1>
+      <div class="form-group row d-flex align-items-center">
+        <div class="col-sm-6 mb-2">
+          <input type="text" class="form-control" id="colFormLabel" placeholder="Name">
+        </div>
+        <div class="col-sm-6 mb-2">
+          <input type="email" class="form-control" id="colFormLabel" placeholder="Email">
+        </div>
+        <div class="col-sm-6 mb-2">
+          <input type="tel" class="form-control" id="colFormLabel" placeholder="Phone">
+        </div>
+        <div class="col-sm-6 mb-2">
+          <input type="text" class="form-control" id="colFormLabel" placeholder="Website">
+        </div>
+        <div class="col-sm-6 mb-2">
+          <input type="text" class="form-control" id="colFormLabel" placeholder="Class">
+        </div>
+        <div class="col-sm-6 mb-2">
+          <input type="text" class="form-control" id="colFormLabel" placeholder="Grade">
+        </div>
+      </div>
     </div>
+
   </section>
-  <!-- End of Section five -->
+  <!-- End of Section Six -->
+
   <footer>
     <div class="container">
       <div class="row">
@@ -215,27 +252,33 @@
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti, iure!</p>
         </div>
         <div class="col-md-2">
-          <h5>Course</h5>
           <ul>
+            <h5>Course</h5>
             <li><a href="#">Graphic Design</a></li>
             <li><a href="#">Web Design</a></li>
             <li><a href="#">Business</a></li>
+            <li><a href="#">Marketing</a></li>
+            <li><a href="#">Engineering</a></li>
           </ul>
         </div>
         <div class="col-md-2">
-          <h5>Terms</h5>
           <ul>
+            <h5>Terms</h5>
             <li><a href="#">Graphic Design</a></li>
             <li><a href="#">Web Design</a></li>
             <li><a href="#">Business</a></li>
+            <li><a href="#">Marketing</a></li>
+            <li><a href="#">Engineering</a></li>
           </ul>
         </div>
         <div class="col-md-2">
-          <h5>Useful Links</h5>
           <ul>
+            <h5>Useful Links</h5>
             <li><a href="#">Graphic Design</a></li>
             <li><a href="#">Web Design</a></li>
             <li><a href="#">Business</a></li>
+            <li><a href="#">Marketing</a></li>
+            <li><a href="#">Engineering</a></li>
           </ul>
         </div> 
       </div>
