--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
-    <!-- Font Awesome Icon -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 
     <!-- Customized CSS -->
     <link rel="stylesheet" href="css/style.css">
@@ -36,7 +36,7 @@
             <li class="nav-item mr-15">
                 <a class="nav-link" href="#">Courses</a>
             </li>
-            <li class="nav-item mr-10">
+            <li class="nav-item mr-15">
                 <a class="nav-link" href="#">Others</a>
             </li>
             <li class="nav-item mr-15">
@@ -55,12 +55,12 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="row d-flex justify-content-between">
-              <div class="col-md-4 carousel-txt">
+              <div class="col-md-5 carousel-txt">
                 <p>Are you ready to learn?</p>
                 <h1>Learn With fun </h1>
                 <h1>on <span style="color:#21B573;">any schedule</span></h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi hic nostrum reiciendis aliquam.</p>
-                <button class="carousel-btn">Get Started</button>
+                <button class="carousel-btn button-design">Get Started</button>
               </div>
               <div class="col-md-6">
                 <img src="images/Photos/Illustration.png" class="d-block w-100" alt="...">
@@ -69,12 +69,12 @@
           </div>
           <div class="carousel-item">
             <div class="row d-flex justify-content-between">
-              <div class="col-md-4 carousel-txt">
+              <div class="col-md-5 carousel-txt">
                 <p>Are you ready to learn?</p>
                 <h1>Learn With fun </h1>
                 <h1>on <span style="color:#21B573;">any schedule</span></h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi hic nostrum reiciendis aliquam.</p>
-                <button class="carousel-btn">Get Started</button>
+                <button class="carousel-btn button-design">Get Started</button>
               </div>
               <div class="col-md-6">
                 <img src="images/Photos/Illustration.png" class="d-block w-100" alt="...">
@@ -83,12 +83,12 @@
           </div>
           <div class="carousel-item">
             <div class="row d-flex justify-content-between">
-              <div class="col-md-4 carousel-txt">
+              <div class="col-md-5 carousel-txt">
                 <p>Are you ready to learn?</p>
                 <h1>Learn With fun </h1>
                 <h1>on <span style="color:#21B573;">any schedule</span></h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi hic nostrum reiciendis aliquam.</p>
-                <button class="carousel-btn">Get Started</button>
+                <button class="button-design carousel-btn">Get Started</button>
               </div>
               <div class="col-md-6">
                 <img src="images/Photos/Illustration.png" class="d-block w-100" alt="...">
@@ -143,40 +143,40 @@
     <div class="container">
       <h1 class="text-center mb-5">Online Courses</h1>
       <div class="card-deck">
-        <div class="card">
+        <div class="card card-box-shadow">
           <img src="images/Photos/Morder pyschology.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Modern pyschology</h5>
             <p>Designation</p>
-            <button class="carousel-btn">Buy Courses</button>
+            <button class="carousel-btn button-design">Buy Courses</button>
           </div>
           <div class="card-footer">            
-            <small class="text-muted float-left mr-5"><i class="fa fa-calendar-minus-o mr-1"></i>Starts 20 April, 2021</small>
-            <small class="text-muted float-right mr-5"><i class="fa fa-users mr-1" aria-hidden="true"></i>60 Seats</small>
+            <small class="text-muted ml-0 float-left"></small><img src="images/ICON/calendar.png" alt=""> Start 20 April, 2021</small>
+            <small class="text-muted float-right mr-5"><img src="images/ICON/people.png" alt="">60 Seats</small>
           </div>
         </div>
-        <div class="card">
+        <div class="card card-box-shadow">
           <img src="images/Photos/Morder pychons.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Modern pyschology</h5>
             <p>Designation</p>
-            <button class="carousel-btn">Buy Courses</button>
+            <button class="carousel-btn button-design">Buy Courses</button>
           </div>
-          <div class="card-footer">           
-            <small class="text-muted float-left mr-5"><i class="fa fa-calendar-minus-o mr-1"></i>Starts 20 April, 2021</small>
-            <small class="text-muted float-right mr-5"><i class="fa fa-users mr-1" aria-hidden="true"></i>60 Seats</small>
+          <div class="card-footer">            
+            <small class="text-muted ml-0 float-left"></small><img src="images/ICON/calendar.png" alt=""> Start 20 April, 2021</small>
+            <small class="text-muted float-right mr-5"><img src="images/ICON/people.png" alt="">60 Seats</small>
           </div>
         </div>
-        <div class="card">
+        <div class="card card-box-shadow">
           <img src="images/Photos/Morder psyc.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Modern pyschology</h5>
             <p>Designation</p>
-            <button class="carousel-btn">Buy Courses</button>
+            <button class="carousel-btn button-design">Buy Courses</button>
           </div>
-          <div class="card-footer">           
-            <small class="text-muted float-left mr-5"><i class="fa fa-calendar-minus-o mr-1"></i>Starts 20 April, 2021</small>
-            <small class="text-muted float-right mr-5"><i class="fa fa-users mr-1" aria-hidden="true"></i>60 Seats</small>
+          <div class="card-footer">            
+            <small class="text-muted ml-0 float-left"></small><img src="images/ICON/calendar.png" alt=""> Start 20 April, 2021</small>
+            <small class="text-muted float-right mr-5"><img src="images/ICON/people.png" alt="">60 Seats</small>
           </div>
         </div>
       </div>
@@ -188,16 +188,14 @@
   <section id="testimonials">
     <div class="container">
       <h1 class="text-center">Testmonial</h1>
-      <div class="row">
         <div class="row testimonial">
           <div class="col-md-4 d-flex justify-content-end">
             <img src="images/Photos/Man.png" alt="">
           </div>
-          <div class="col-md-6 text-center">
+          <div class="col-md-5 text-center">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit pariatur amet impedit cum harum cumque ipsam expedita distinctio tenetur delectus possimus quia non necessitatibus, ipsa recusandae aliquam debitis quod eligendi? Earum.</p>
           </div>
         </div>
-      </div>
     </div>
   </section>
   <!-- End of TESTIMONIALS section -->
@@ -205,11 +203,11 @@
   <!-- Subscribe Section | Section Five-->
   <section id="subscibe">
     <div class="container">
-      <h1 class="text-center">SUBSCRIBE US</h1>
-      <div class="container d-flex align-items-center justify-content-center">
-        <div>
+      <h1 class="text-center mb-5">SUBSCRIBE US</h1>
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-6">
           <input placeholder="Please, enter your email." class="form-control mb-3" type="text">
-          <button class="subs-button">SUBSCRIBE  </button>
+          <button type="button" class="btn btn-info btn-lg btn-block subs-button button-design">SUBSCRIBE</button>
         </div>
       </div>
     </div>
@@ -244,6 +242,28 @@
 
   </section>
   <!-- End of Section Six -->
+
+  <!-- Address Section | Seventh Section-->
+  <section>
+    <div class="container">
+      <div class="row d-flex justify-content-center">
+        <div class="col-sm-6">
+          <div class="card address">
+            <div class="card-body">
+              <address class="text-center">                
+                <h5 class="card-title">ADDRESS</h5>
+                <p class="card-text">John Doe.</p>
+                <p class="card-text">129 McFarland, CA</p>
+                <p class="card-text">Mobile: 01818-000000</p>
+                <p>Email: <a style="color: tomato;" href="email@gmail.com">email@gmail.com</a></p>
+              </address>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End of Address Section -->
 
   <footer>
     <div class="container">
@@ -283,15 +303,15 @@
         </div> 
       </div>
       <div class="copyright text-center">
-        <p>Copyright <span>&#9400;</span><a target="_blank" href="https://github.com/spaceled?tab=projects">2020. Rezaul</a></p>
+        <p>Copyright <span>&#9400;</span><a target="_blank" href="https://spaceled.github.io/eSchool-assignment-2/">2020. Rezaul</a></p>
       </div>  
     </div>
   </footer>
     
 
 
-    <!-- Bootstrap Min JavaScript -->
-    <!-- JQuery First, then popper.js then bootstrap.min.js-->
+    <!-- Bootstrap Min Javascript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap.js -->
   <script type="text/javascript"  src="js/jquery-3.5.1.slim.min.js"></script>
   <script type="text/javascript"  src="js/popper.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
